[gd_scene load_steps=7 format=4 uid="uid://c2pw2dqladfd4"]

[ext_resource type="TileSet" uid="uid://barvov7l180li" path="res://scenes/levels/level_1/tile_set_l1.tres" id="1_2bqsw"]
[ext_resource type="Script" uid="uid://bfybtsvpbv1dx" path="res://scripts/level_1/level_p_1_room_2.gd" id="1_fjv16"]
[ext_resource type="PackedScene" uid="uid://b32efwi1xc15v" path="res://scenes/players/player_1.tscn" id="2_i2k3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2k3q"]
size = Vector2(33, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqwrt"]
size = Vector2(26, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjv16"]
size = Vector2(40, 29)

[node name="level_p1_room_2" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_fjv16")

[node name="background_ l1" type="ColorRect" parent="."]
offset_left = -746.0
offset_top = -339.0
offset_right = 2239.0
offset_bottom = 1973.0
color = Color(0, 0, 0, 1)

[node name="room_r2_l1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAARAAkAAAABAAIAAAASAAkAAAABAAIAAAATAAcAAAABAAEAAAATAAgAAAABAAIAAAATAAkAAAABAAIAAAAUAAcAAAABAAEAAAAUAAgAAAABAAIAAAAUAAkAAAABAAIAAAAVAAcAAAABAAEAAAAVAAgAAAABAAIAAAAVAAkAAAABAAIAAAAWAAcAAAABAAEAAAAWAAgAAAABAAIAAAAWAAkAAAABAAIAAAAXAAcAAAABAAEAAAAXAAgAAAABAAIAAAAXAAkAAAABAAIAAAAYAAcAAAABAAEAAAAYAAgAAAABAAIAAAAYAAkAAAABAAIAAAATAAoAAAABAAIAAAAUAAoAAAABAAIAAAAVAAoAAAABAAIAAAAWAAoAAAABAAIAAAAXAAoAAAABAAIAAAAYAAoAAAABAAIAAAAZAAoAAAABAAIAAAAaAAoAAAABAAIAAAAbAAoAAAABAAIAAAAcAAoAAAABAAIAAAAdAAoAAAABAAIAAAATAAYAAAABAAAAAAAUAAYAAAABAAAAAAAVAAYAAAABAAAAAAAWAAYAAAABAAAAAAAXAAYAAAABAAAAAAAYAAYAAAABAAAAAAAZAAYAAAABAAAAAAAZAAcAAAABAAEAAAAaAAYAAAAAAAIAAAAaAAcAAAABAAEAAAAbAAYAAAABAAIAAAAbAAcAAAABAAIAAAAcAAYAAAACAAIAAAAcAAcAAAABAAEAAAAdAAYAAAABAAAAAAAdAAcAAAABAAEAAAAeAAYAAAABAAAAAAAeAAcAAAABAAEAAAAfAAYAAAABAAAAAAAfAAcAAAABAAEAAAAeAAoAAAABAAIAAAAfAAoAAAABAAIAAAAfAAkAAAABAAIAAAAfAAgAAAABAAIAAAAeAAgAAAABAAIAAAAdAAgAAAABAAIAAAAcAAgAAAABAAIAAAAbAAgAAAABAAIAAAAaAAgAAAABAAIAAAAZAAgAAAABAAIAAAAZAAkAAAABAAIAAAAaAAkAAAABAAIAAAAbAAkAAAABAAIAAAAcAAkAAAABAAIAAAAdAAkAAAABAAIAAAAeAAkAAAABAAIAAAASAAcAAAABAAEAAAASAAgAAAABAAIAAAASAAYAAAABAAAAAAARAAcAAAABAAEAAAARAAgAAAABAAIAAAARAAoAAAABAAIAAAASAAoAAAABAAIAAAASAAsAAAABAAUAAAATAAsAAAABAAUAAAAUAAsAAAABAAUAAAAVAAsAAAABAAUAAAAWAAsAAAABAAUAAAAXAAsAAAABAAUAAAAYAAsAAAABAAUAAAAZAAsAAAABAAUAAAAaAAsAAAABAAUAAAAbAAsAAAABAAUAAAAcAAsAAAABAAUAAAAdAAsAAAABAAUAAAAeAAsAAAABAAUAAAAfAAsAAAABAAUAAAAgAAYAAAABAAAAAAAgAAcAAAABAAEAAAAgAAgAAAABAAIAAAAgAAkAAAABAAIAAAAgAAoAAAABAAIAAAAgAAsAAAABAAUAAAAhAAYAAAABAAAAAAAhAAcAAAABAAEAAAAhAAgAAAABAAIAAAAhAAkAAAABAAIAAAAhAAoAAAABAAIAAAAhAAsAAAABAAUAAAAiAAYAAAABAAAAAAAiAAcAAAABAAEAAAAiAAgAAAABAAIAAAAiAAkAAAABAAIAAAAiAAoAAAABAAIAAAAiAAsAAAABAAUAAAAjAAYAAAABAAAAAAAjAAcAAAABAAEAAAAjAAgAAAABAAIAAAAjAAkAAAABAAIAAAAjAAoAAAABAAIAAAAjAAsAAAABAAUAAAAkAAYAAAABAAAAAAAkAAcAAAABAAEAAAAkAAgAAAABAAIAAAAkAAkAAAABAAIAAAAkAAoAAAABAAIAAAAkAAsAAAABAAUAAAAlAAYAAAABAAAAAAAlAAcAAAABAAEAAAAlAAgAAAABAAIAAAAlAAkAAAABAAIAAAAlAAoAAAABAAIAAAAlAAsAAAABAAUAAAAcAAUAAAACAAEAAAAaAAUAAAAAAAEAAAAbAAUAAAABAAIAAAAmAAcAAAABAAEAAAAmAAgAAAABAAIAAAAmAAkAAAABAAIAAAAmAAoAAAABAAIAAAAQAAcAAAABAAEAAAAQAAgAAAABAAIAAAAQAAkAAAABAAIAAAAQAAoAAAABAAIAAAARAAYAAAABAAAAAAARAAsAAAABAAUAAAAOAAcAAAABAAAAAAAOAAgAAAABAAEAAAAOAAkAAAABAAIAAAAOAAoAAAABAAUAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAIAAAAPAAgAAAAAAAMAAAAPAAkAAAABAAIAAAAPAAoAAAAAAAQAAAAPAAsAAAAAAAUAAAAQAAYAAAABAAAAAAAQAAsAAAABAAUAAAAmAAYAAAABAAAAAAAmAAsAAAABAAUAAAAnAAYAAAACAAAAAAAnAAcAAAACAAIAAAAnAAgAAAACAAMAAAAnAAkAAAABAAIAAAAnAAoAAAACAAQAAAAnAAsAAAACAAUAAAAoAAcAAAABAAAAAAAoAAgAAAABAAEAAAAoAAkAAAABAAIAAAAoAAoAAAABAAUAAAA=")
tile_set = ExtResource("1_2bqsw")

[node name="player1" parent="." instance=ExtResource("2_i2k3q")]
position = Vector2(531, 289)

[node name="change_room_1" type="Area2D" parent="."]
position = Vector2(458, 280)

[node name="coll_area_1" type="CollisionShape2D" parent="change_room_1"]
position = Vector2(6.5, 18)
shape = SubResource("RectangleShape2D_i2k3q")

[node name="cange_room_3" type="Area2D" parent="."]
position = Vector2(1299, 303)

[node name="Coll_area2" type="CollisionShape2D" parent="cange_room_3"]
shape = SubResource("RectangleShape2D_sqwrt")

[node name="leave_to_room4" type="Area2D" parent="."]
position = Vector2(881, 173)

[node name="CollisionShape2D" type="CollisionShape2D" parent="leave_to_room4"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_fjv16")

[connection signal="body_entered" from="change_room_1" to="." method="_on_change_room_body_entered"]
[connection signal="body_entered" from="cange_room_3" to="." method="_on_cange_room_3_body_entered"]
[connection signal="body_entered" from="leave_to_room4" to="." method="_on_leave_to_room_4_body_entered"]
